#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libraft], [0.0.0.0], [583032753@qq.com])
#AC_CONFIG_SRCDIR([src/raft/commond.cpp])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(libraft,0.1)
# Checks for programs.

AC_PROG_CXX
AC_PROG_LIBTOOL
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdint.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_CHECK_FUNCS([ftruncate mkdir strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
